fix friends link overflow
fix friends link overflow

--- a/cloudsen_blog/static/cloudsen_blog/css/blog.css
+++ b/cloudsen_blog/static/cloudsen_blog/css/blog.css
@@ -57,4 +57,10 @@ a.a-img {
     width: 75%;
     height: 100%;
 }
+
+.over-hidden {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
 /* friends card end */
